tests/diagnostics/expressions/method_calls/mutating_receiver_immutable/expect.txt
# exit: 1
input/main.coppice:11:17: error: cannot call mutating method 'User.bump' on immutable binding 'user'
      return user.bump(1)
                  ^
